<resources>
    <string name="app_name">CapStoneStage1</string>
    <string name="title_activity_viewer">ViewerActivity</string>
    <string name="title_activity_config">ConfigActivity</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="share_via">Share Via</string>
    <string name="btn_facebook">Facebook</string>
    <string name="btn_gmail">GMail</string>
    <string name="btn_google_drive">Google Drive</string>
    <string name="unknown_media">Unknown media</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="filename">Filename</string>
    <string name="sender">Sender</string>
    <string name="recipient">TO: Recipient</string>
    <string name="carbon_copy">CC: Carbon Copy</string>
    <string name="blind_carbon_copy">BCC: Blind Carbon Copy</string>

    <!-- configuration -->
    <string name="single_interlace_view">Single Interlace View</string>
    <string name="virtual_reality_view">Virtual Reality View</string>
    <string name="debug">Debug</string>
    <string name="interlace_width_pixels">Interlace width (pixels):</string>
    <string name="image_height_pixels">Image height (pixels):</string>
    <string name="border_offset_pixels">Border offset (pixels):</string>
    <string name="parallax_dis_pixels">Parallax distance (pixels):</string>
    <string name="color1">Color 1</string>
    <string name="color2">Color 2</string>
    <string name="color3">Color 3</string>
    <string name="numberpicker">NumberPicker</string>
    <string name="access_voice">Voice command</string>

    <!-- Accessibility - dictation -->
    <string name="dictation">Dictation:</string>
    <string name="command">Command:</string>
    <string name="unknown">Unknown</string>
    <string name="value">Value:</string>

    <!-- viewer -->
    <string name="no_image_available">No image available</string>
    <string name="latest">latest</string>

    <!-- menu -->
    <string name="configuration">Configuration</string>
    <string name="logout">Logout</string>

    <!-- main -->
    <string name="random">RAND  M</string>
    <string name="random_land1">RAND</string>
    <string name="random_land2">M</string>
    <string name="viewer">Viewer</string>

    <!-- fragment 1 -->
    <string name="subject">Subject</string>
    <string name="btn_send">Send</string>
    <string name="btn_exit">Exit</string>
    <string name="share_failed">Share failed</string>
    <string name="db_create_failed">DB create failed</string>
    <string name="db_query_failed">DB query failed</string>

    <!-- fragment 2 -->
    <string name="header_msg">Header Message:</string>
    <string name="footer_msg">Footer Message:</string>
    <string name="header_default_msg">header stuff</string>
    <string name="footer_default_msg">footer stuff</string>

    <!-- fragment 3 -->
    <string name="clear">Clear</string>
    <string name="shape_selection">Shape selections:</string>
    <string name="msg_max_len_exceeded">Message length exceed maximum</string>

    <string name="out_of">out of </string>
    <string name="svg_loaded_ok">SVGs loaded OK</string>

    <!-- fragment 4 -->
    <string name="header">header</string>
    <string name="footer">footer</string>

    <string name="rendering">Rendering</string>
    <string name="nothing_to_render">Nothing to render</string>
    <string name="create_svg_view_failed">CreateSVGView failed</string>
    <string name="create_bmp_failed">CreateBitmap failed</string>
    <string name="save_bmp_failed">SaveBitmap failed</string>

    <!-- tabActivity -->
    <string name="share">Share</string>
    <string name="msg">Message</string>
    <string name="shape">Shape</string>
    <string name="preview">Preview</string>

    <!-- shape fragments -->
    <string name="loading">Loading</string>

    <!-- Color popup dialog -->
    <string name="choose">Choose</string>
    <string name="btn_cancel">cancel</string>

    <!-- number picker dialog -->
    <string name="choose_value">Choose Value</string>
    <string name="choose_number">Choose Number</string>
    <string name="ok">OK</string>

    <!-- Shape icons -->
    <string name="telephone">phone</string>
    <string name="camera">camera</string>
    <string name="coffee">coffee</string>
    <string name="house">house</string>
    <string name="music">music</string>
    <string name="present">gift</string>
    <string name="rocket">rocket</string>
    <string name="sharing">share</string>
    <string name="shopping">shopping</string>
    <string name="star">star</string>
    <string name="truck">truck</string>
    <string name="umbrella">umbrella</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
