<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="25dp"
        android:id="@+id/txt_media_title"/>

    <LinearLayout
        android:id="@+id/layout_gmail"
        android:layout_width="match_parent"
        android:layout_height="401dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="43dp"
        android:orientation="vertical"
        android:visibility="visible">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:id="@+id/txt_gmail_username"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:text="@string/password"
            android:id="@+id/txt_gmail_password"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sender"
            android:id="@+id/txt_gmail_sender"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipient"
            android:id="@+id/txt_gmail_recipient"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subject"
            android:id="@+id/txt_gmail_subject"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_drive"
        android:layout_width="match_parent"
        android:layout_height="421dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:visibility="invisible">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:text="@string/password" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filename" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_facebook"
        android:layout_width="match_parent"
        android:layout_height="390dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/layout_gmail"
        android:orientation="vertical"
        android:visibility="invisible">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:text="@string/password" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subject" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_send"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="44dp"
        android:text="@string/btn_send" />

</RelativeLayout>